# soundlab

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  soundlab-prd.md  soundlab-tasklist.md  soundlab.ipynb
.github/workflows/: ci.yml  colab-test.yml  release.yml
docs/: conf.py  index.md  index.rst  mkdocs.yml  overview.rst
docs/api/: analysis.md  core.md  effects.md  index.md  io.md  separation.md  transcription.md  utils.md  voice.md
docs/guides/: analysis.md  colab-usage.md  effects.md  extending.md  index.md  installation.md  quickstart.md  separation.md  transcription.md  voice.md
examples/: README.md  analyze_audio.py  apply_effects.py  batch_process.py  separate_stems.py  transcribe_to_midi.py
notebooks/: soundlab_studio.ipynb
notebooks/examples/: 01_stem_separation.ipynb  02_midi_transcription.ipynb  03_audio_analysis.ipynb  04_effects_processing.ipynb  midi_transcription.ipynb  stem_separation.ipynb  voice_conversion.ipynb
scripts/: benchmark.py  download_models.py
tasklists/lanes/: batch-00-lane-0A.md  batch-00-lane-0B.md  batch-00-lane-0C.md  batch-01-lane-1A.md  batch-01-lane-1B.md  batch-02-lane-2A.md  batch-02-lane-2B.md  batch-02-lane-2C.md  batch-03-lane-3A.md  batch-03-lane-3B.md  batch-03-lane-3C.md  batch-03-lane-3D.md  batch-04-lane-4A.md  batch-04-lane-4B.md  batch-04-lane-4C.md  batch-04-lane-4D.md  batch-04-lane-4E.md  batch-05-lane-5A.md  batch-05-lane-5B.md  batch-05-lane-5C.md  batch-06-lane-6A.md  batch-06-lane-6B.md  batch-06-lane-6C.md  batch-06-lane-6D.md  batch-06-lane-6E.md  batch-07-lane-7A.md  batch-07-lane-7B.md  batch-07-lane-7C.md  batch-08-lane-8A.md  batch-08-lane-8B.md  batch-08-lane-8C.md  batch-08-lane-8D.md  batch-08-lane-8E.md  batch-09-lane-9A.md  batch-09-lane-9B.md  batch-09-lane-9C.md  batch-10-lane-10A.md  batch-10-lane-10B.md  batch-10-lane-10C.md  batch-11-lane-11A.md
tests/: __init__.py  conftest.py
tests/fixtures/audio/: generate_fixtures.py
tests/integration/: __init__.py  test_analysis_integration.py  test_drum_midi_integration.py  test_pipeline.py  test_pipeline_qa_selection.py  test_separation_integration.py  test_transcription_integration.py  test_voice_integration.py
tests/unit/: __init__.py  test_audio_io.py  test_audio_models.py  test_cli.py  test_effects_chain.py  test_effects_models.py  test_exceptions.py  test_export.py  test_gpu.py  test_key_detection.py  test_logging.py  test_midi_io.py  test_pipeline_models.py  test_pipeline_postprocess.py  test_pipeline_qa.py  test_progress.py  test_retry.py  test_separation_models.py  test_separation_utils.py  test_svc.py  test_transcription_backends.py  test_transcription_models.py  test_tts.py  test_visualization.py  test_voice_models.py
