[project]
name = "soundlab-workspace"
version = "0.1.0"
description = "SoundLab workspace root"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Wyatt Walsh" }]

dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "ty==0.0.10",
    "pre-commit>=3.7",
    "sphinx>=7.0",
    "shibuya>=2024.1",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
soundlab = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["pyproject.toml"]

[tool.hatch.build.targets.sdist]
include = ["pyproject.toml", "README.md", "LICENSE"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["packages/soundlab/src"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ARG",
    "SIM",
    "TCH",
    "PTH",
    "RUF",
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["soundlab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-v",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring GPU",
    "integration: marks integration tests",
]

[tool.coverage.run]
source = ["packages/soundlab/src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
